Fixed the gap between the nav area and footer
This is kind of ugly stuff though, hacking the vertical sizes in
the code. Do not like it, wonder if this isn't the right way.

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -17,6 +17,7 @@
 #nav-container {
    position: relative;
    width: 100%;
+   margin-bottom: 7px;
 }
 
 #nav-shows {
